# arty-factory

./: .gitignore  arty-factory.cabal  stack.yaml
site/: index.html
site/script/: factory-client.js
src/: Server.hs
